# BID

./: .gitignore  BUGS  README.md  TODO  __main__.py  app.py  bf_compiler.py  bfpyler.py  interpreter.py  main.py  pyproject.toml
bid/: __main__.py  app.py  interpreter.py  utils.py
bid/compiler/: __main__.py  c.py  transpiler.py
bid/compiler/languages/: asm.py  c.py  py.py
docs/: BUGS  TODO
test_programs/: array_bounds_checking_expects_0_-1.bf
